# genie-trusted-asset-copilot

./: Makefile  README.md  pyproject.toml  requirements.txt  run.sh
genie_trusted_asset_copilot/: __init__.py  complexity_evaluator.py  conversation_reader.py  logging_config.py  main.py  models.py  sql_optimizer.py  trusted_asset_creator.py
notebooks/: run_trusted_asset_copilot.py
